# Kairelz_db_server

./: CMakeLists.txt  Database.cpp  Database.h  Query.cpp  Query.h  Record.h  client.cpp  db.txt  gen.cpp  gen.h  http.cpp  in.txt  input.txt  main.cpp  th_serv.cpp
